--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     <description>chess-project</description>
     <properties>
         <java.version>17</java.version>
+        <start-class>com.sansoft.chessproject.application.ChessProjectApplication</start-class>
     </properties>
     <dependencies>
         <dependency>
